<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/phone_show_background"
    android:orientation="vertical" >

    <com.likebamboo.phoneshow.widget.Title
        android:id="@+id/overlay_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/overlay_result_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/gray" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <LinearLayout
            android:id="@+id/overlay_loading_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/overlay_loading_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/overlay_loading_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/loading_msg"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overlay_result_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <ListView
                android:id="@+id/overlay_result_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000" >
            </ListView>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/overlay_dealwith_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/overlay_end_call_bt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/call_reject" />

        <Button
            android:id="@+id/overlay_answer_call_bt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/call_answer" />
    </LinearLayout>

</LinearLayout>