<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="com.likebamboo.phoneshow.MainActivity">
    <com.likebamboo.phoneshow.widget.Title
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main_activity_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/show_type_activity_msg" />

            <ImageView
                android:id="@+id/main_activity_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/btn_time_choose_bg"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#ffdddddd" />

        <LinearLayout
            android:id="@+id/main_full_dialog_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/show_type_full_dialog_msg" />

            <ImageView
                android:id="@+id/main_full_dialog_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/btn_time_choose_bg"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#ffdddddd" />

        <LinearLayout
            android:id="@+id/main_half_dialog_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="6"
                android:text="@string/show_type_half_dialog_msg" />

            <ImageView
                android:id="@+id/main_half_dialog_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/btn_time_choose_bg" />
        </LinearLayout>
    </LinearLayout>

    <com.likebamboo.phoneshow.widget.TimeDragPicker
        android:id="@+id/main_time_picker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
